@@ -23,7 +23,7 @@ fi
 
 OUTFILE=$CLIENTTMPDIR/${USER}-tmpdir/$BASENAME.out
 ERRFILE=$CLIENTTMPDIR/${USER}-tmpdir/$BASENAME.err
-TMPFILE=$SOLVERPATH/results/$BASENAME.tmp
+TMPFILE=$SOLVERPATH/$OUTPUTDIR/$BASENAME.tmp
 uname -a                            > $OUTFILE
 uname -a                            > $ERRFILE
 echo "hard time limit: $HARDTIMELIMIT">>$OUTFILE
@@ -44,10 +44,10 @@ date                                >> $ERRFILE
 echo                                >> $OUTFILE
 echo =ready=                        >> $OUTFILE
 
-mv $OUTFILE $SOLVERPATH/results/$BASENAME.out
-mv $ERRFILE $SOLVERPATH/results/$BASENAME.err
+mv $OUTFILE $SOLVERPATH/$OUTPUTDIR/$BASENAME.out
+mv $ERRFILE $SOLVERPATH/$OUTPUTDIR/$BASENAME.err
 
 rm -f $TMPFILE
 #chmod g+r $ERRFILE
-#chmod g+r $SCIPPATH/results/$BASENAME.out
-#chmod g+r $SCIPPATH/results/$BASENAME.set
+#chmod g+r $SCIPPATH/$OUTPUTDIR/$BASENAME.out
+#chmod g+r $SCIPPATH/$OUTPUTDIR/$BASENAME.set
