@@ -71,6 +71,9 @@ OPTCOMMAND	=	optimize
 SETCUTOFF	=	0
 VISUALIZE       =       false
 MAXJOBS         =       1
+EXECUTABLE      =       $(MAINFILE)
+BINID           =       $(notdir $(EXECUTABLE))
+OUTPUTDIR       =       results
 
 # set SCIP version here for external projects
 # use underscore to make it compatible with def.h
